--- a/src/components/HomeComponents/HeroSection.css
+++ b/src/components/HomeComponents/HeroSection.css
@@ -1,12 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 .carousel {
-  width: 100vw;
-  height: 80vh; /* Default height for larger screens */
-
-  z-index: 20;
-  overflow: hidden;
   position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 600px;
 
 }
 
@@ -22,7 +20,7 @@
   background-position: 50% 50%;
   background-size: cover;
   z-index: 100;
-  transition: 1s;
+  transition: transform 0.8s ease-in-out;
 }
 
 .carousel .list .item:nth-child(1),
