--- a/client/src/components/HomeComponents/HeroSection.css
+++ b/client/src/components/HomeComponents/HeroSection.css
@@ -5,7 +5,6 @@
   overflow: hidden;
   width: 100%;
   height: 600px;
-
 }
 
 .carousel .list .item {
@@ -22,7 +21,13 @@
   z-index: 100;
   transition: transform 0.8s ease-in-out;
 }
-
+.carousel .list .item video,
+.carousel .list .item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+}
 .carousel .list .item:nth-child(1),
 .carousel .list .item:nth-child(2) {
   top: 0;
@@ -55,7 +60,7 @@
   top: 50%;
   left: 50px;
   transform: translateY(-50%);
-  width: 300px;
+  width: 100%;
   color: #fff;
   display: none;
 }
@@ -75,7 +80,7 @@
   top: 50%;
   left: 50px;
   transform: translateY(-50%);
-  width: 300px;
+  width: 100%;
   color: #fff;
   display: none;
   z-index: 2; /* Ensuring content stays above overlay */
@@ -260,9 +265,8 @@
 @media screen and (max-width: 480px) {
   .carousel {
     height: 80vh; /* Adjust height for very small screens */
-
   }
-  .carousel .list .item{
+  .carousel .list .item {
     width: 100px;
     height: 70px;
   }
@@ -284,7 +288,7 @@
   .content .des {
     font-size: 10px; /* Small description */
   }
-  .content .btn{
+  .content .btn {
     margin-top: -25px;
   }
   .content .btn button {
